@@ -5,7 +5,8 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Extend floatgrid with by-index directive.
+  [Kevin Bieri]
 
 
 1.2.0 (2016-03-30)
